--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive"] }
 eframe = "0.33.3"
 egui = "0.33.3"
-egui-snarl = "0.9.0"
+egui-snarl = { version = "0.9.0", features = ["serde"] }
 egui_plot = "0.34.0"
 plotly = "0.13.5"
 rand = "0.9.2"
+serde = "1.0.228"
